[tool.poetry]
name = "byzantium"
version = "1.0.0"
description = "Kimera Byzantium (Synode + Hydra)"
authors = ["marin <catalin@orson.ro>"]
readme = "README.md"
packages = [
    { include = "synode", from="src" },
    { include = "background", from="src" }
]


[tool.poetry.dependencies]
celery = "*"
kimeraai = { path = "../kimeraai", develop = false }


[tool.kimp]
extensions = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
