[tool.poetry]
name = "byzantium"
version = "1.0.0"
description = "Kimera Byzantium (Synode + Hydra)"
authors = ["marin <catalin@orson.ro>"]
readme = "README.md"
package-mode = true
packages = [
    { include = "synode", from="src" },
    { include = "background", from="src" }
]


[tool.poetry.dependencies]
python="^3.12"
kimeraai = {git = "https://github.com/catalincelmarin/kimp-ext-kimeraai.git", branch="provisional" }

[tool.kimp]
extensions = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
