[tool.poetry]
name = "byzantium"
version = "1.0.0"
description = "Kimera Byzantium (Synode + Hydra)"
authors = ["marin <catalin@orson.ro>"]
readme = "README.md"
package-mode = true
packages = [
    { include = "synode", from="src" },
    { include = "background", from="src" }
]


[tool.poetry.dependencies]
python="^3.12"
jmespath = "^1.0.1"

# kimeraai = {git = "../kimeraai", develop=false }
kimeraai = {git = "https://github.com/catalincelmarin/kimp-ext-kimeraai.git", tag="v1.0.0" }



[tool.kimp]
extensions = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
